resources/assets/sass/helpers/_helpers.scss
// Helpers
// ======
// Helper classes.
// ==========

.clearfix::after {
  content: "";
  display: table;
  clear: both;
}

.o-card {
  position: relative;
  padding: $space-small;
  border-radius: $border-radius-base;
  box-shadow: 0 1px 10px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
  background-color: $white;

  .o-card-title {
    margin-bottom: $space-small;
    font-size: 16px;
    font-weight: 500;
  }

  .o-card-description {
    min-height: 30px;
    margin-bottom: $space-small;
    color: $text-color-secondary;
  }

  .o-card-delete-btn {
    display: none;
    position: absolute;
    top: 20px;
    right: 20px;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background-color: $black;
    color: $white;
    font-size: 12px;
    line-height: 20px;
    text-align: center;
    cursor: pointer;
  }

  &:hover {
    .o-card-delete-btn {
      display: block;
    }
  }

  .o-card-img {
    position: relative;
    height: 100px;
    overflow: hidden;
    border-radius: 3px;

    img {
      @include img-cover(100%);
    }

    .user-list {
      position: absolute;
      right: 4px;
      bottom: 4px;

      .user {
        display: inline-block;
        width: 30px;
        height: 30px;
        overflow: hidden;
        border-radius: 50%;
        margin-left: 4px;
        border: 2px solid #fff;
      }
    }
  }

  .o-card-btn {
    @include button($green);
    width: 100%;
    margin-top: $space-small;
    font-size: 18px;

    i {
      margin-right: 4px;
    }
  }
}

.o-list-4 {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;

  .o-list-item {
    flex: 0 1 23%;
    padding-bottom: $space-small;
  }

  @media (max-width: $breakpoint-md) {
    .o-list-item {
      flex: 0 1 49%;
    }
  }

  @media (max-width: $breakpoint-xs) {
    flex-flow: column wrap;

    .o-list-item {
      flex: 1;
    }
  }
}

.o-list-3 {
  display: flex;
  flex-flow: row wrap;
  align-items: flex-start;

  .o-list-item {
    flex: 33%;
    padding-bottom: $space-small;
  }

  @media (max-width: $breakpoint-md) {
    .o-list-item {
      flex: 0 1 49%;
    }
  }

  @media (max-width: $breakpoint-xs) {
    align-items: stretch;
    flex-flow: column wrap;

    .o-list-item {
      flex: 1;
    }
  }
}

.o-list-2 {
  display: flex;
  flex-flow: row wrap;
  align-items: flex-start;

  .o-list-item {
    flex: 0 1 50%;
    padding: 0 $space-small $space-small 0;

    &:nth-child(2n) {
      padding-right: 0;
    }
  }

  @media (max-width: $breakpoint-md) {
    align-items: stretch;
    flex-flow: column wrap;

    .o-list-item {
      flex: 1;
      padding-right: 0;
    }
  }
}

.o-overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, .6);

  .o-overlay-content {
    position: relative;
    width: 500px;
    margin: 50px auto 80px auto;
    padding: $space-small;

    .title-wrapper {
      display: flex;
      justify-content: space-between;

      .title {
        width: 90%;
        font-size: 20px;
      }

      .close-btn {
        align-items: center;
        cursor: pointer;
        font-size: 26px;
      }
    }
  }
}

.u-margin-b-1 {
  margin-bottom: $space-xsmall;
}

